@@ -1022,7 +1022,6 @@ dnl Output Files
 dnl ------------
 
 AC_CONFIG_FILES([Makefile
-                 manual/Makefile
                  man/Makefile
 				 man/man1/Makefile
                  src/Makefile
