@@ -1,3 +1,12 @@
+2010-06-20  Robert Larice
+ * Makefile.am, configure.in, manual/Makefile.am:
+ undo the manual inclusion, see "2010-06-13  Robert Larice"
+  the manual is now a package of its own,
+    cvs checkout ngspice/ng-spice-manual
+    cd ng-spice-manual ; ./configure
+    make dist     # for the tar ball, that is manual source plus pdf manual
+    make install  # to install the pdf
+
 2010-06-20 Holger Vogt
  * AUTHORS, INSTALL, COPYING, README: update to version 21
 
